# DHP

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  eslint.config.js  package.json  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
apps/ai-service/: .env.example  Dockerfile  pyproject.toml
apps/ai-service/app/: logging.py  main.py  settings.py
apps/ai-service/app/application/: parse_intent_use_case.py
apps/ai-service/app/domain/model/: scheduling_intent.py
apps/ai-service/app/domain/ports/: embedding_repository.py  llm_runnable.py
apps/ai-service/app/infrastructure/http/: middleware.py  routes.py
apps/ai-service/app/infrastructure/llm/: langchain_adapter.py
apps/core-api/: Dockerfile  package.json  tsconfig.json  vitest.api.config.ts  vitest.int.config.ts  vitest.unit.config.ts
apps/core-api/prisma/: schema.prisma
apps/core-api/src/: app.module.ts  main.ts
apps/core-api/src/auth/: auth.int.test.ts  auth.module.ts
apps/core-api/src/health/: health.controller.ts
apps/notification-worker/: Dockerfile  package.json
apps/notification-worker/src/: logger.ts  main.ts  outbox-drain.ts
apps/notify-service/migrations/: V1__init_notify_schema.sql  V2__ui_and_template_management.sql
apps/web/: .env.example  .env.local.example  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx
docs/: architecture.md  components.md  design-patterns.md  implementation.md  runbook-dev.md  schema-reference.sql
migrations/: V1__init.sql
scripts/: init-db.sql  register-authplex-client.sh
(+139 files in other folders)
