[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dhp-ai-service"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "langchain>=0.3.0",
  "langchain-openai>=0.2.0",
  "langchain-anthropic>=0.3.0",
  "langgraph>=0.2.0",
  "asyncpg>=0.30.0",
  "pgvector>=0.3.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "httpx>=0.27.0",
  "python-jose[cryptography]>=3.3.0",
  "structlog>=24.4.0",
  "opentelemetry-sdk>=1.28.0",
  "opentelemetry-instrumentation-fastapi>=0.49b0",
  "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
  "testcontainers[postgres]>=4.8.0",
  "ruff>=0.7.0",
  "mypy>=1.12.0",
  "import-linter>=2.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP", "ANN", "S", "B", "C90"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=85"

[tool.importlinter]
root_packages = ["app"]

[[tool.importlinter.contracts]]
name = "Domain layer must not import infrastructure"
type = "forbidden"
source_modules = ["app.domain"]
forbidden_modules = ["app.infrastructure", "fastapi", "sqlalchemy", "asyncpg"]
